syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.dclauth;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dclauth/account.proto";
import "dclauth/pending_account.proto";
import "dclauth/pending_account_revocation.proto";
import "dclauth/account_stat.proto";
import "dclauth/revoked_account.proto";
import "dclauth/rejected_account.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/dclauth/types";

import "cosmos_proto/cosmos.proto";

// Query defines the gRPC querier service.
service Query {
    // Queries a account by index.
	rpc Account(QueryGetAccountRequest) returns (QueryGetAccountResponse) {
		option (google.api.http).get = "/dcl/auth/accounts/{address}";
	}

	// Queries a list of account items.
	rpc AccountAll(QueryAllAccountRequest) returns (QueryAllAccountResponse) {
		option (google.api.http).get = "/dcl/auth/accounts";
	}

// Queries a pendingAccount by index.
	rpc PendingAccount(QueryGetPendingAccountRequest) returns (QueryGetPendingAccountResponse) {
		option (google.api.http).get = "/dcl/auth/proposed-accounts/{address}";
	}

	// Queries a list of pendingAccount items.
	rpc PendingAccountAll(QueryAllPendingAccountRequest) returns (QueryAllPendingAccountResponse) {
		option (google.api.http).get = "/dcl/auth/proposed-accounts";
	}

// Queries a pendingAccountRevocation by index.
	rpc PendingAccountRevocation(QueryGetPendingAccountRevocationRequest) returns (QueryGetPendingAccountRevocationResponse) {
		option (google.api.http).get = "/dcl/auth/proposed-revocation-accounts/{address}";
	}

	// Queries a list of pendingAccountRevocation items.
	rpc PendingAccountRevocationAll(QueryAllPendingAccountRevocationRequest) returns (QueryAllPendingAccountRevocationResponse) {
		option (google.api.http).get = "/dcl/auth/proposed-revocation-accounts";
	}

// Queries a accountStat by index.
	rpc AccountStat(QueryGetAccountStatRequest) returns (QueryGetAccountStatResponse) {
		option (google.api.http).get = "/dcl/auth/accounts/stat";
	}
	
// Queries a RevokedAccount by index.
	rpc RevokedAccount(QueryGetRevokedAccountRequest) returns (QueryGetRevokedAccountResponse) {
		option (google.api.http).get = "/dcl/auth/revoked-accounts/{address}";
	}

	// Queries a list of RevokedAccount items.
	rpc RevokedAccountAll(QueryAllRevokedAccountRequest) returns (QueryAllRevokedAccountResponse) {
		option (google.api.http).get = "/dcl/auth/revoked-accounts";
	}

// Queries a RejectedAccount by index.
	rpc RejectedAccount(QueryGetRejectedAccountRequest) returns (QueryGetRejectedAccountResponse) {
		option (google.api.http).get = "/dcl/auth/rejected-accounts/{address}";
	}

	// Queries a list of RejectedAccount items.
	rpc RejectedAccountAll(QueryAllRejectedAccountRequest) returns (QueryAllRejectedAccountResponse) {
		option (google.api.http).get = "/dcl/auth/rejected-accounts";
	}

// this line is used by starport scaffolding # 2
}

message QueryGetAccountRequest {
	  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

}

message QueryGetAccountResponse {
	Account account = 1 [(gogoproto.nullable) = false];
}

message QueryAllAccountRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllAccountResponse {
	repeated Account account = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetPendingAccountRequest {
	  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

}

message QueryGetPendingAccountResponse {
	PendingAccount pendingAccount = 1 [(gogoproto.nullable) = false];
}

message QueryAllPendingAccountRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPendingAccountResponse {
	repeated PendingAccount pendingAccount = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetPendingAccountRevocationRequest {
	  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

}

message QueryGetPendingAccountRevocationResponse {
	PendingAccountRevocation pendingAccountRevocation = 1 [(gogoproto.nullable) = false];
}

message QueryAllPendingAccountRevocationRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPendingAccountRevocationResponse {
	repeated PendingAccountRevocation pendingAccountRevocation = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetAccountStatRequest {}

message QueryGetAccountStatResponse {
	AccountStat AccountStat = 1 [(gogoproto.nullable) = false];
}

message QueryGetRevokedAccountRequest {
	  string address = 1;

}

message QueryGetRevokedAccountResponse {
	RevokedAccount revokedAccount = 1 [(gogoproto.nullable) = false];
}

message QueryAllRevokedAccountRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllRevokedAccountResponse {
	repeated RevokedAccount revokedAccount = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetRejectedAccountRequest {
	  string address = 1;

}

message QueryGetRejectedAccountResponse {
	RejectedAccount rejectedAccount = 1 [(gogoproto.nullable) = false];
}

message QueryAllRejectedAccountRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllRejectedAccountResponse {
	repeated RejectedAccount rejectedAccount = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
